Removed absolute paths

--- a/index.html
+++ b/index.html
@@ -39,77 +39,77 @@
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_1.pdf">Assignment 1</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_1.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-1/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-1/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_2.pdf">Assignment 2</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_2.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-2/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-2/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_3.pdf">Assignment 3</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_3.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-3/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-3/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_4.pdf">Assignment 4</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_4.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-4/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-4/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_5.pdf">Assignment 5</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_5.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-5/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-5/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_6.pdf">Assignment 6</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_6.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-6/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-6/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_7.pdf">Assignment 7</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_7.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-7/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-7/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_8.pdf">Assignment 8</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_8.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-8/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-8/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_9.pdf">Assignment 9</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_9.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-9/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-9/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_10.pdf">Assignment 10</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_10.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-10/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-10/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_11.pdf">Assignment 11</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_11.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-11/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-11/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_12.pdf">Assignment 12</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_12.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-12/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-12/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_13.pdf">Assignment 13</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_13.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-13/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-13/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_14.pdf">Assignment 14</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_14.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-14/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-14/">Demo</a></div>
 		</div>
 		<div class="col-sm-2 col-xs-4">
 			<div><a target="_blank" href="/assets/assignments/html/Assignment_15.pdf">Assignment 15</a></div>
 			<div><a target="_blank" href="/assets/assignments/html/bundles/assignment_15.zip">Bundle</a></div>
-			<div><a target="_blank" href="https://jsproblemsandsolutions.000webhostapp.com/assets/assignments/html/demo/assignment-15/">Demo</a></div>
+			<div><a target="_blank" href="/assets/assignments/html/demo/assignment-15/">Demo</a></div>
 		</div>
 	</div>
 	
