--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="col-sm-12 section">
 			<h2>
 				<strong>HTML Assignments</strong>
-				<span class="duration">(Duration: 25 days)</span>
+				<!--<span class="duration">(Duration: 25 days)</span>-->
 			</h2>
 			<p>Note: Convert the following UX designs into HTML. Make use of HTML5 + CSS3 + Boostrap 4</p>
 		</div>
@@ -117,7 +117,7 @@
 		<div class="col-sm-12 section">
 			<h2>
 				<strong>JavaScript Assignments</strong>		
-				<span class="duration">(Duration: 20 days)</span>
+				<!--<span class="duration">(Duration: 20 days)</span>-->
 				<span class="btn-expand">Expand</span>
 			</h2>
 			<div class="js-question-holder">
@@ -135,7 +135,7 @@
 		<div class="col-sm-12 section">
 			<h2>
 				<strong>Angular 6 Assignments</strong>		
-				<span class="duration">(Duration: 25 days)</span>
+				<!--<span class="duration">(Duration: 25 days)</span>-->
 			</h2>
 		</div>
 		<div class="col-sm-12">
@@ -219,7 +219,7 @@
 		<div class="col-sm-12 section">
 			<h2>
 				<strong>React Assignments</strong>		
-				<span class="duration">(Duration: 25 days)</span>
+				<!--<span class="duration">(Duration: 25 days)</span>-->
 			</h2>
 		</div>
 		<div class="col-sm-12">
