--- a/problems.html
+++ b/problems.html
@@ -2467,6 +2467,11 @@ loadJson('no-such-user.json') // (3)
 
 
 151. Write a JavaScript program to extract out the values at the specified indexes from an specified array.
+e.g.:
+let arra1 = ['a', 'b', 'c', 'd', 'e', 'f'];
+console.log(pull_at_Index(arra1, [1, 3]));
+let arra2 =  [1, 2, 3, 4, 5, 6, 7];
+console.log(pull_at_Index(arra2, [4]));
 
 
 152. Write a JavaScript program to generate a random hexadecimal color code.
