added pages for cpp and python

--- a/ui.html
+++ b/ui.html
@@ -11,8 +11,13 @@
 	
 	<div class="row">
 		<div class="col-sm-12">
-			<div class="main-header">
-				<div class="heading">Ramp up plan - UI</div>
+			<div class="row main-header">
+				<div class="col-sm-5 heading">
+					<a href="/">Training plan</a>
+				</div>
+				<div class="col-sm-7 heading">
+					UI
+				</div>
 			</div>
 			<div class="points-to-remember">
 				<h4>Points to remember:</h4>
@@ -134,7 +139,7 @@
 	<div class="row">
 		<div class="col-sm-12 section">
 			<h2>
-				<strong>Angular 6 Assignments</strong>		
+				<strong>Angular Assignments</strong>		
 				<!--<span class="duration">(Duration: 25 days)</span>-->
 			</h2>
 		</div>
@@ -313,7 +318,7 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script> -->
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="ui.js"></script>
 
 
 </body>
