removed angular version

--- a/ui.html
+++ b/ui.html
@@ -163,7 +163,7 @@
 				<li class="angular-assignment-list">
 					<span class="project-title">Create simple CRUD application in Angular for student database management.</span><br/><strong>Requirements:</strong>
 					<ol>
-						<li>Use Angular 6 as frontend application</li>
+						<li>Use Angular as frontend application</li>
 						<li>Use MySQL/PostgreSQL as database backend</li>
 						<li>Use NodeJS as backend</li>
 						<li>For simplicity, use monolithic architecture</li>
