added UI long term assignments

--- a/ui.html
+++ b/ui.html
@@ -3,7 +3,8 @@
 <head>
 <title>JavaScript Problems and Solutions | Anshuman Deshpande</title>
 <link rel="stylesheet" href="style.css"></link>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <!--<body oncopy="return false" oncut="return false" onpaste="return false"> -->
 <body>
@@ -139,7 +140,7 @@
 	<div class="row">
 		<div class="col-sm-12 section">
 			<h2>
-				<strong>Angular Assignments</strong>		
+				<strong>Angular Assignments - For bootstraping and concept overview</strong>		
 				<!--<span class="duration">(Duration: 25 days)</span>-->
 			</h2>
 		</div>
@@ -301,6 +302,22 @@
 					</ol>
 				</li>
 			</ul>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12 section">
+			<h2>
+				<strong>Assignments - Long term assignments and Real time Projects</strong>
+			</h2>
+		</div>
+		<div class="col-sm-12 my-3">
+			<strong class="project-title">Candidate Evaluation Portal</strong>
+			<div>Tasks for these projects will be allocated according to the project backlog</div>
+		</div>
+		<div class="col-sm-12 my-3">
+			<strong class="project-title">SPAN CRM</strong>
+			<div>Tasks for these projects will be allocated according to the project backlog</div>
 		</div>
 	</div>
 	
