--- a/ui.html
+++ b/ui.html
@@ -358,6 +358,114 @@
 			</div>
 		</div>
 
+
+		<div class="row">
+			<div class="col-sm-12 section">
+				<h2>
+					<strong>Vue Assignments</strong>
+					<span class="duration">(Duration: 25 days)</span>
+				</h2>
+			</div>
+			<div class="col-sm-12">
+				<ul>
+					<li class="angular-assignment-list">
+						<span class="project-title">Create a simple To-do
+							application.</span><br /><strong>Requirements:</strong>
+						<ol>
+							<li>The application should make use of browser webstorage</li>
+							<li>Any user should be able to add, edit, view, delete, and strikeout notes created.</li>
+						</ol>
+					</li>
+					<li class="angular-assignment-list">
+						<span class="project-title">Create a simple Calculator
+							application.</span><br /><strong>Requirements:</strong>
+						<ol>
+							<li>The application should display numbers and basic opertors</li>
+							<li>The app should store history of the calculations. If page is refreshed, the history
+								should be cleared</li>
+						</ol>
+					</li>
+					<li class="angular-assignment-list">
+						<span class="project-title">Create simple CRUD application in Vue for library database
+							management.</span><br /><strong>Requirements:</strong>
+						<ol>
+							<li>Use Vue as frontend application</li>
+							<li>Use MySQL/PostgreSQL as database backend</li>
+							<li>Use NodeJS as backend</li>
+							<li>For simplicity, use monolithic architecture</li>
+							<li>First, create a requirement document for the project specifying the approach and system
+								design</li>
+						</ol>
+						<strong>Note:</strong>
+						<ol>
+							<li>The app should have a login functionality.</li>
+							<li>The application should three roles, viz. Student, Librarian, and Administrator(hereby
+								referred as admin)</li>
+							<li>The student should only be able to view and edit only his/her respective data and not
+								any other's data.</li>
+							<li>The librarian should only be able to view and edit only his/her respective data and not
+								any other's data.</li>
+							<li>The librarian will be allocated a facility for management.</li>
+							<li>The librarian can edit the stock of books in the respective facility.</li>
+							<li>A system admin will have the ability to add, update, block, and delete any student.</li>
+							<li>Any student should not be able to edit/view the admin's data.</li>
+							<li>Any student should not be able to edit/view the librarian's data.</li>
+							<li>Any student should not be able to edit/view the book's data.</li>
+							<li>Any ibrarian should not be able to edit/view the admin's data.</li>
+							<li>Any ibrarian should not be able to edit/view the student's data.</li>
+							<li>The app should also maintain which librarian updated book's data.</li>
+						</ol>
+					</li>
+					<li class="angular-assignment-list">
+						<span class="project-title">Design an application in Vue which will enable a patient to book
+							an appointment.</span><br /><strong>Requirements:</strong>
+						<ol>
+							<li>The app should have three logins, viz. Doctor, Patient, and Administrator(hereby
+								referred as admin)</li>
+							<li>The Doctor should be able to view list of all the patients visited so far.</li>
+							<li>The doctor should be able to confirm or reject any appointment request he has got.</li>
+							<li>The appointments should be displayed using a calendar and normal listing. Doctor should
+								be able to view the appointments based on what date he/she has clicked.</li>
+							<li>The patient should be able to request/schedule appointment with any doctor he/she wishes
+								to visit.</li>
+							<li>The patient can withdraw the request any time before the scheduled time of the visit.
+							</li>
+							<li>Patient should be able to view complete profile of the doctor.</li>
+							<li>Doctor should be able to view complete profile of the patient.</li>
+							<li>Only admin will reserve the sole right to add, edit, update, delete, block any user of
+								the system(Doctor and Patient)</li>
+							<li>Patients will have the ability to provide ratings to any doctor they have visited, only
+								once.</li>
+						</ol>
+					</li>
+					<li class="angular-assignment-list">
+						<span class="project-title">Design a simple online shopping cart application using Vue
+						</span><br /><strong>Requirements:</strong>
+						<ol>
+							<li>The app should have three logins, viz. User, Store Owner, and Administrator(hereby
+								referred as admin)</li>
+							<li>Users and Store Owners will have to register through the portal. Admin will approve only
+								the Store Owners. Users should be by default activated.</li>
+							<li>The User should be able to view list of all the items purchased so far.</li>
+							<li>The Store Owner should be able to add, edit, block, or delete the items in the store.
+							</li>
+							<li>For simplicity, assume the application sells only one particular type of items. E.g.
+								t-shirts</li>
+							<li>The store owner should be able to view all the order history and upcoming orders,
+								displayed in the ascending order of date of order</li>
+							<li>The user can cancel the order any time.</li>
+							<li>User should be able to view complete profile of the Store Owner.</li>
+							<li>Store Owner should be able to view complete profile of the user.</li>
+							<li>Only admin will reserve the sole right to add, edit, update, delete, block any user of
+								the system(Store Owner and User)</li>
+							<li>Users and Store Owners will have the ability to provide ratings to each other, only
+								once.</li>
+						</ol>
+					</li>
+				</ul>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col-sm-12 section">
 				<h2>
